--- a/Tételek/ORG/Irodalom/1_tetel_Ady_Endre_Leda_tetel.org
+++ b/Tételek/ORG/Irodalom/1_tetel_Ady_Endre_Leda_tetel.org
@@ -15,11 +15,11 @@ hanem költői szimbólum is.
 :PROPERTIES:
 :CUSTOM_ID: tér-és-idő
 :END:
-- Időszak: Ady és Léda kapcsolata 1903--1912 között tartott.\\
+- Időszak: Ady és Léda kapcsolata 1903--1912 között tartott.
 - Helyszín: Elsősorban Párizs, de a Léda-versekben gyakran megjelenik az
 éjszaka, a bálterem, a szalonok világa, illetve a természet (kert,
-virágmotívumok).\\
-\\
+virágmotívumok).
+
 Ez a korszak Ady modern költészetének születése, a francia szimbolizmus
 hatása is érződik.
 
@@ -28,13 +28,13 @@ hatása is érződik.
 :CUSTOM_ID: a-léda-motívum-jellemzői
 :END:
 - A Léda-versekben a szerelem ellentmondásos: szenvedélyes, de fájdalmas
-is.\\
+is.
 - Gyakori az ambivalencia: szeretet és gyűlölet, vágy és kiábrándulás
-egyszerre jelenik meg.\\
+egyszerre jelenik meg.
 - Léda a végzet asszonya (femme fatale): bűnre csábít, de egyben
-felemeli a költőt.\\
+felemeli a költőt.
 - A költő és Léda viszonya harcos, szenvedélyes kapcsolat: a modern
-szerelem megtestesítője.\\
+szerelem megtestesítője.
 - A Léda-motívum mögött ott van a modern ember magányossága, a vágy a
 teljességre, amit azonban lehetetlen elérni.
 
@@ -57,8 +57,8 @@ teljességre, amit azonban lehetetlen elérni.
 A Léda-motívum Ady költészetében a modern szerelem drámáját jeleníti
 meg. Nem egyszerű szerelmi líra, hanem az örök emberi vágy és szenvedés
 szimbóluma. A Léda-versek a költő belső harcát is tükrözik: a
-szabadságvágy és a kötődés közötti őrlődést.\\
-\\
+szabadságvágy és a kötődés közötti őrlődést.
+
 A Léda-motívum Ady modern lírájának egyik legfontosabb témája, mely
 túlmutat a személyes szerelmi élményen, és általános emberi kérdéseket
 fogalmaz meg.
