--- a/Tételek/ORG/Irodalom/7_Kosztolanyi_prozai.org
+++ b/Tételek/ORG/Irodalom/7_Kosztolanyi_prozai.org
@@ -2,16 +2,13 @@
 #+AUTHOR: Gyenes Béla
 #+LANGUAGE: hu
 #+CATEGORY: hu_irodalom
-** Tételmondat:
+* Tételmondat:
 :PROPERTIES:
 :CUSTOM_ID: tételmondat
 :END:
-Kosztolányi Dezső prózájában a tér és az idő nem csupán a cselekmény
-keretéül szolgál, hanem a belső világok, a lelkiállapotok, az emlékezés
-és az identitás feltárásának eszköze is, különösen a gyermekkori terek
-és az emlékező elbeszélésmód révén.
+Kosztolányi Dezső prózájában a tér és az idő nem csupán a cselekmény keretéül szolgál, hanem a belső világok, a lelkiállapotok, az emlékezés és az identitás feltárásának eszköze is, különösen a gyermekkori terek és az emlékező elbeszélésmód révén.
 
-** 1. Bevezetés -- Kosztolányi mint prózaíró
+* Bevezetés -- Kosztolányi mint prózaíró
 :PROPERTIES:
 :CUSTOM_ID: bevezetés-kosztolányi-mint-prózaíró
 :END:
@@ -24,42 +21,35 @@ novellák, esszék) is kiemelkedő.
 - Prózájára jellemző az introspektív (befelé figyelő) hangvétel, az
 emlékező elbeszélő szerepe, és a líraiság.
 
-** 2. A tér szerepe Kosztolányi prózájában
+* A tér szerepe Kosztolányi prózájában
 :PROPERTIES:
 :CUSTOM_ID: a-tér-szerepe-kosztolányi-prózájában
 :END:
 - A tér gyakran belső térként, a lélek kivetüléseként jelenik meg.
 
-- Szabadka, a szülőváros, visszatérő helyszín, gyakran idealizált,
-gyermekkorra emlékeztető térként.
+- Szabadka, a szülőváros, visszatérő helyszín, gyakran idealizált, gyermekkorra emlékeztető térként.
 
-- A gyermekkori ház, iskola, utca -- a nosztalgia, a veszteség és az
-elmúlás szimbólumai.
+- A gyermekkori ház, iskola, utca -- a nosztalgia, a veszteség és az elmúlás szimbólumai.
 
-- Példa: Esti Kornél novellák -- a tér sokszor álomszerű, elmosódott
-határokkal bír, az emlékezés szubjektív természetét tükrözve.
+- Példa: Esti Kornél novellák -- a tér sokszor álomszerű, elmosódott határokkal bír, az emlékezés szubjektív természetét tükrözve.
 
-- A terek gyakran bezártságot vagy elidegenedést is kifejeznek -- pl.
-iskolai pad, hivatalok, kisvárosi szobák.
+- A terek gyakran bezártságot vagy elidegenedést is kifejeznek -- pl. iskolai pad, hivatalok, kisvárosi szobák.
 
-** 3. Az idő szerepe
+* Az idő szerepe
 :PROPERTIES:
 :CUSTOM_ID: az-idő-szerepe
 :END:
-- Kosztolányinál az idő nem lineáris, hanem szubjektív, emlékezésen
-keresztül feltárt.
+- Kosztolányinál az idő nem lineáris, hanem szubjektív, emlékezésen keresztül feltárt.
 
 - A jelen és múlt összemosódik, különösen az elbeszélő emlékezése során.
 
 - Fontos az elmúlás, a gyermeki ártatlanság elvesztésének motívuma.
 
-- Az idő gyakran melankolikus hangulatot teremt -- a múló idő
-szomorúsága, a vissza nem térő múlt fájdalma.
+- Az idő gyakran melankolikus hangulatot teremt -- a múló idő szomorúsága, a vissza nem térő múlt fájdalma.
 
-- Esti Kornél figurája maga is az idő kettősségét hordozza: a felnőtt
-író és a benne élő gyermeki én találkozása.
+- Esti Kornél figurája maga is az idő kettősségét hordozza: a felnőtt író és a benne élő gyermeki én találkozása.
 
-** 4. Példák az életműből
+* Példák az életműből
 :PROPERTIES:
 :CUSTOM_ID: példák-az-életműből
 :END:
@@ -85,7 +75,7 @@ elnyomás szimbólumai.
 bizonytalanság korát mutatja be, amely az egyéni sorsokra is hatással
 van.
 
-** 5. Összegzés
+* Összegzés
 :PROPERTIES:
 :CUSTOM_ID: összegzés
 :END:
