--- a/Tételek/ORG/Irodalom/9_Petofi_hitvesi_kolteszet.org
+++ b/Tételek/ORG/Irodalom/9_Petofi_hitvesi_kolteszet.org
@@ -2,69 +2,50 @@
 #+AUTHOR: Gyenes Béla
 #+LANGUAGE: hu
 #+CATEGORY: hu_irodalom
-1. Történelmi és irodalmi háttér
+* Történelmi és irodalmi háttér
 
-- Időszak: A hitvesi költészet leginkább az 1846--1848 közötti évekre
-tehető, különösen 1847 után, amikor Petőfi feleségül vette Szendrey
-Júliát (1847. szeptember 8.).
+- Időszak: A hitvesi költészet leginkább az 1846--1848 közötti évekre tehető, különösen 1847 után, amikor Petőfi feleségül vette Szendrey Júliát (1847. szeptember 8.).
 
-- Térbeli elhelyezés: Magyarország különböző pontjai, de legfontosabbak:
-Pest, Koltó (nászút helyszíne), Erdély, Alföld.
+- Térbeli elhelyezés: Magyarország különböző pontjai, de legfontosabbak: Pest, Koltó (nászút helyszíne), Erdély, Alföld.
 
-- Irodalmi korszak: A magyar reformkor és a romantika virágzása. Petőfi
-költészete a romantikus líra sajátosságait követi, de egyéni hangon
-szólal meg.
+- Irodalmi korszak: A magyar reformkor és a romantika virágzása. Petőfi költészete a romantikus líra sajátosságait követi, de egyéni hangon szólal meg.
 
-2. A hitvesi költészet jellemzői
+* A hitvesi költészet jellemzői
 
-- Téma: A szerelem és házasság boldogsága, a feleséghez fűződő mély,
-személyes érzelmek. Nem idealizált, hanem valódi, emberi érzéseken
-alapuló kapcsolat jelenik meg.
+- Téma: A szerelem és házasság boldogsága, a feleséghez fűződő mély, személyes érzelmek. Nem idealizált, hanem valódi, emberi érzéseken alapuló kapcsolat jelenik meg.
 
-- Hangnem: Személyes, őszinte, olykor játékos, máskor szenvedélyes és
-megható.
+- Hangnem: Személyes, őszinte, olykor játékos, máskor szenvedélyes és megható.
 
-- Újdonság: A házastársi szerelem lírai megfogalmazása újszerű volt a
-magyar irodalomban, hiszen korábban a szerelem költészete gyakran plátói
-vagy eszményi volt.
+- Újdonság: A házastársi szerelem lírai megfogalmazása újszerű volt a magyar irodalomban, hiszen korábban a szerelem költészete gyakran plátói vagy eszményi volt.
 
-3. Kiemelkedő művek
+* Kiemelkedő művek
 
-- „Szeptember végén” -- talán a legismertebb hitvesi vers, amely
-egyszerre szól a szerelemről és az elmúlásról.
+- „Szeptember végén” -- talán a legismertebb hitvesi vers, amely egyszerre szól a szerelemről és az elmúlásról.
 
-- „Reszket a bokor, mert...” -- szerelmes vers Júliához, tele romantikus
-képekkel.
+- „Reszket a bokor, mert...” -- szerelmes vers Júliához, tele romantikus képekkel.
 
-- „Levél Várady Antalhoz” -- epikusabb hangvételű, de a Júlia iránti
-érzéseket közvetíti.
+- „Levél Várady Antalhoz” -- epikusabb hangvételű, de a Júlia iránti érzéseket közvetíti.
 
-- „Költői hitvallás” -- nem közvetlenül hitvesi vers, de a költői szerep
-és a személyes érzések kapcsolatáról szól.
+- „Költői hitvallás” -- nem közvetlenül hitvesi vers, de a költői szerep és a személyes érzések kapcsolatáról szól.
 
-4. Petőfi és Szendrey Júlia kapcsolata
+* Petőfi és Szendrey Júlia kapcsolata
 
-- Szenvedélyes, de viharos kapcsolat. Júlia is művelt nő volt, aki
-verset írt és fordított.
+- Szenvedélyes, de viharos kapcsolat. Júlia is művelt nő volt, aki verset írt és fordított.
 
 - Petőfi szerelme mély és őszinte, de erősen féltékeny is volt.
 
-- A költemények gyakran dokumentálják a kapcsolat különböző fázisait:
-vágyakozás, beteljesülés, aggodalom, boldogság.
+- A költemények gyakran dokumentálják a kapcsolat különböző fázisait: vágyakozás, beteljesülés, aggodalom, boldogság.
 
-5. Stílus és nyelvezet
+* Stílus és nyelvezet
 
 - Egyszerű, közérthető nyelv, mégis költői képekben gazdag.
 
-- Erős érzelemkifejezés, közvetlen megszólítás (apostrófé), gyakori
-megszemélyesítések és természetképek.
+- Erős érzelemkifejezés, közvetlen megszólítás (apostrófé), gyakori megszemélyesítések és természetképek.
 
-6. Összegzés
+* Összegzés
 
 - Petőfi hitvesi költészete új fejezetet nyitott a magyar lírában.
 
-- A házasság és szerelem költői megörökítése őszinte, személyes és
-időtálló.
+- A házasság és szerelem költői megörökítése őszinte, személyes és időtálló.
 
-- E versek nemcsak Petőfi érzelmeit, hanem korának eszméit is tükrözik a
-házasságról, női szerepről és a költői hivatásról.
+- E versek nemcsak Petőfi érzelmeit, hanem korának eszméit is tükrözik a házasságról, női szerepről és a költői hivatásról.
