--- a/Tételek/ORG/Irodalom/8_Mikszath_Kalman_novellisztikaja.org
+++ b/Tételek/ORG/Irodalom/8_Mikszath_Kalman_novellisztikaja.org
@@ -16,10 +16,8 @@
 :PROPERTIES:
 :CUSTOM_ID: mikszáth-helye-az-irodalomban
 :END:
-- Realizmus és romantika határán mozog, de a novelláiban egyéni stílust
-alakított ki.
-- A népi anekdota, a szájhagyományos elbeszélés, a balladai tömörség és
-az újságírói megfigyelés sajátos elegye jellemzi.
+- Realizmus és romantika határán mozog, de a novelláiban egyéni stílust alakított ki.
+- A népi anekdota, a szájhagyományos elbeszélés, a balladai tömörség és az újságírói megfigyelés sajátos elegye jellemzi.
 - A Tisza Kálmán-korszak és a kiegyezés utáni társadalmi problémák
 visszaköszönnek műveiben.
 
